--- a/review.html
+++ b/review.html
@@ -97,6 +97,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
   <script src="js/code.jquery.com_jquery-3.7.0.min.js"></script>
   <script>
+    $('#appname').on('click', function(){
+      window.location = 'index.html';
+    })
+    
     const jwt = getJwt();
     userProfile();
     function userProfile() {
