--- a/review.html
+++ b/review.html
@@ -253,7 +253,7 @@
           }
         })
         .then((message) => {
-          swal(message);
+          // swal(message);
         })
         .catch((error) => {
           swal(error.message);
@@ -290,5 +290,10 @@
 
       return null;
     }
+
+    // for(let i=0; i<50; ++i){
+
+    //   addReview(14, {"rating": 5, "description": `Review ${i+1}`})
+    // }
   </script>
 </html>
